--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </div>
       </div>
     </nav>
+    
     <div
       class="container section min-vh-100 d-flex justify-content-center flex-column align-items-center pt-5"
       id="home"
@@ -189,7 +190,7 @@
           />
         </div>
       </div>
-
+      
       <div class="row mt-3 mt-lg-5 next">
         <a href="#projects" class="col"
           ><iconify-icon
@@ -197,6 +198,12 @@
             class="arrow-next"
           ></iconify-icon
         ></a>
+      </div>
+      <div class="row w-100 mb-4 text-capitalize">
+        <p class="text-info border border-primary" style="font-family: Papyrus, Fantasy;">
+          Hello I am Michael Zheng I have added a new section to the page. I like to
+          Play games and Sing.
+        </p>
       </div>
     </div>
     <div
@@ -392,7 +399,6 @@
         </div>
       </div>
     </div>
-
     <script>
       const tooltipTriggerList = document.querySelectorAll(
         '[data-bs-toggle="tooltip"]'
