new section added

--- a/index.html
+++ b/index.html
@@ -200,10 +200,20 @@
         ></a>
       </div>
       <div class="row w-100 mb-4 text-capitalize">
-        <p class="text-info border border-primary" style="font-family: Papyrus, Fantasy;">
+        <p class="alert alert-primary text-info border border-primary" style="font-family: Papyrus, Fantasy;">
           Hello I am Michael Zheng I have added a new section to the page. I like to
           Play games and Sing.
         </p>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown button
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div
