--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
           ></iconify-icon
         ></a>
       </div>
-      <div class="row w-100 mb-4 text-capitalize">
-        <p class="alert alert-primary text-info border border-primary" style="font-family: Papyrus, Fantasy;">
+      <div class="row w-100 mb-4 text-capitalize border border-primary">
+        <p class="alert alert-primary text-info" style="font-family: Papyrus, Fantasy;">
           Hello I am Michael Zheng I have added a new section to the page. I like to
           Play games and Sing.
         </p>
@@ -213,6 +213,9 @@
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
+        </div>
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Loading...</span>
         </div>
       </div>
     </div>
