new section added

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
           ></iconify-icon
         ></a>
       </div>
-      <div class="row w-100 mb-4 text-capitalize border border-primary">
-        <p class="alert alert-primary text-info" style="font-family: Papyrus, Fantasy;">
+      <div class="row w-100 mb-4 border border-primary">
+        <p class="alert alert-warning text-info" style="font-family: Papyrus, Fantasy;">
           Hello I am Michael Zheng I have added a new section to the page. I like to
           Play games and Sing.
         </p>
@@ -213,6 +213,9 @@
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
+          <p class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="font-family: Papyrus, Fantasy;">
+            This is a shadow
+          </p>
         </div>
         <div class="spinner-border text-primary" role="status">
           <span class="visually-hidden">Loading...</span>
